Updated app labels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">palette</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">Palette</string>
+    <string name="title_activity_main">Palette</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
